--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -34,11 +34,11 @@ jobs:
   tests-linux:
     name: Unit Tests (GNU/Linux)
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         python-version: ['3.10', '3.11', '3.12', '3.13', '3.14']
-        
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -60,18 +60,63 @@ jobs:
         sudo ./configure
         sudo make
         sudo cp aex bap /bin
-      
+
     - name: Setup Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install tox tox-gh-actions
-        
+
     - name: Test with tox
       env:
         PLATFORM: ubuntu-latest
+      run: tox
+
+  tests-macos:
+    name: Unit Tests (macOS)
+    runs-on: macos-latest
+
+    strategy:
+      matrix:
+        python-version: ['3.10', '3.11', '3.12', '3.13', '3.14']
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Install aspell (en)
+      run: |
+        brew update
+        brew install aspell
+
+    - name: Download bap
+      run: |
+        wget https://github.com/ietf-tools/bap/archive/refs/heads/master.zip
+        unzip -q master.zip -d /tmp/bap
+
+    - name: Build bap
+      working-directory: /tmp/bap/bap-master/
+      run: |
+        sudo apt-get install -y bison flex libfl-dev
+        sudo ./configure
+        sudo make
+        sudo cp aex bap /bin
+
+    - name: Setup Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install tox tox-gh-actions
+
+    - name: Test with tox
+      env:
+        PLATFORM: macos-latest
       run: tox
