ci: Another attempt at windows tests

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -120,67 +120,67 @@ jobs:
         PLATFORM: macos-latest
       run: tox
 
-#  tests-windows:
-#    name: Unit Tests (windows)
-#    runs-on: windows-latest
-#
-#    strategy:
-#      matrix:
-#        python-version: ['3.10', '3.11', '3.12', '3.13', '3.14']
-#
-#    steps:
-#    - name: Checkout repository
-#      uses: actions/checkout@v4
-#
-#    - name: Install hunspell (en) and other required system dependencies
-#      run: |
-#        choco install mingw -y
-#        choco install winflexbison3 -y
-#        choco install hunspell.portable -y
-#
-#    - name: Add Make to PATH
-#      shell: powershell
-#      run: |
-#        $mingwPath = "C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\bin"
-#        "$mingwPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-#
-#    - name: Download bap
-#      shell: powershell
-#      run: |
-#        $url = "https://github.com/ietf-tools/bap/archive/refs/heads/master.zip"
-#        $destination = "master.zip"
-#        $destinationPath = "bap"
-#
-#        Invoke-WebRequest -Uri $url -OutFile $destination
-#        New-Item -ItemType Directory -Force -Path $destinationPath | Out-Null
-#        Expand-Archive -Path $archivePath -DestinationPath $destinationPath -Force
-#
-#    - name: Build bap
-#      shell: cmd
-#      run: |
-#        cd bap\bap-master\
-#        make
-#
-#    - name: Copy bap binary to system path
-#      shell: powershell
-#      run: |
-#        $installDir = "$env:USERPROFILE\tools\bin"
-#        $binaryBap = "bap\bap-master\bap"
-#        New-Item -ItemType Directory -Force -Path $installDir | Out-Null
-#        Copy-Item -Path $BinaryName -Destination "$installDir\$BinaryName"
-#        "$installDir" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-#
-#    - name: Setup Python ${{ matrix.python-version }}
-#      uses: actions/setup-python@v5
-#      with:
-#        python-version: ${{ matrix.python-version }}
-#
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        python -m pip install tox tox-gh-actions
-#
-#    - name: Test with tox
-#      env:
-#        PLATFORM: windows-latest
-#      run: tox
+  tests-windows:
+    name: Unit Tests (windows)
+    runs-on: windows-latest
+
+    strategy:
+      matrix:
+        python-version: ['3.10', '3.11', '3.12', '3.13', '3.14']
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Install hunspell (en) and other required system dependencies
+      run: |
+        choco install mingw -y
+        choco install winflexbison3 -y
+        choco install hunspell.portable -y
+
+    - name: Add Make to PATH
+      shell: powershell
+      run: |
+        $mingwPath = "C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\bin"
+        "$mingwPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+    - name: Download bap
+      shell: powershell
+      run: |
+        $url = "https://github.com/ietf-tools/bap/archive/refs/heads/master.zip"
+        $destination = "master.zip"
+        $destinationPath = "bap"
+
+        Invoke-WebRequest -Uri $url -OutFile $destination
+        New-Item -ItemType Directory -Force -Path $destinationPath | Out-Null
+        Expand-Archive -Path $destination -DestinationPath $destinationPath -Force
+
+    - name: Build bap
+      shell: cmd
+      run: |
+        cd bap\bap-master\
+        make
+
+    - name: Copy bap binary to system path
+      shell: powershell
+      run: |
+        $installDir = "$env:USERPROFILE\tools\bin"
+        $binaryBap = "bap\bap-master\bap"
+        New-Item -ItemType Directory -Force -Path $installDir | Out-Null
+        Copy-Item -Path $BinaryName -Destination "$installDir\$BinaryName"
+        "$installDir" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+    - name: Setup Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install tox tox-gh-actions
+
+    - name: Test with tox
+      env:
+        PLATFORM: windows-latest
+      run: tox
