--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -157,7 +157,7 @@ jobs:
 
     - name: Build bap
       shell: cmd
-      working-directory: ./bap/bap-master/
+      working-directory: ./bap
       run: |
         make
 
@@ -165,7 +165,7 @@ jobs:
       shell: powershell
       run: |
         $installDir = "$env:USERPROFILE\tools\bin"
-        $binaryBap = "bap\bap-master\bap"
+        $binaryBap = "bap\bap"
         New-Item -ItemType Directory -Force -Path $installDir | Out-Null
         Copy-Item -Path $BinaryName -Destination "$installDir\$BinaryName"
         "$installDir" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
