ci: Restrict tests to main branch

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -2,7 +2,7 @@ name: Tests + Code Analysis
 
 on:
   push:
-  #  branches: [ main ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
